--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy to Railway
 
 on:
   schedule:
-    - cron: '45 14 * * *'  # Выполнять каждый день в 14:45 UTC
+    - cron: '47 11 * * *'
 
 jobs:
   deploy:
