--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQLConnectionStringLocal": "User Id=postgres;Password=123123;Server=localhost;Port=5432;Database=CRMEngSystemDataBase",
-    "PostgreSQLConnectionString": "Host=roundhouse.proxy.rlwy.net;Port=58461;Username=postgres;Password=vtRsPZNZNDmfoybLhjpZmakScbTMCFMy;Database=railway"
+    "PostgreSQLConnectionStringLocal": "User Id=postgres;Password=123123;Server=localhost;Port=5432;Database=CRMEngSystemDataBase"
   },
   "Logging": {
     "LogLevel": {
